fix: ios flip visibility

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -834,6 +834,7 @@ body:has(.side-menu:checked) {
   left: 0;
   width: 100%;
   height: 100%;
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   overflow: hidden;
   border-radius: 20px;
